--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
     "web-vitals": "^1.1.2"
