--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
+    "sweetalert2": "^11.1.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
