--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bulma": "^0.9.3",
     "dotenv": "^4.0.0",
     "firebase": "^9.1.0",
     "graphql": "^15.5.0",
