[FIX] Server route

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ prettier.config.js
 .env.test.local
 .env.production.local
 
-/src/hoc/ApolloConnect.js
+# /src/hoc/ApolloConnect.js
 
 npm-debug.log*
 yarn-debug.log*
