--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.9.3",
     "dotenv": "^4.0.0",
     "firebase": "^9.1.0",
+    "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
@@ -20,7 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "sweetalert2": "^11.1.7",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
