--- a/package.json
+++ b/package.json
@@ -13,22 +13,21 @@
     "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
+    "next": "^12.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "sweetalert2": "^11.1.7",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "next start",
+    "build": "next build",
+    "dev": "next dev",
+    "test": "next test"
   },
   "eslintConfig": {
     "extends": [
