--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "node": "14.x"
   },
   "devDependencies": {
+    "@types/node": "^18.7.23",
+    "@types/react": "^18.0.21",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -60,6 +62,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.27.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.8.4"
   }
 }
