--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bulma": "^0.9.3",
+    "dayjs": "^1.11.5",
     "dotenv": "^4.0.0",
     "firebase": "^9.1.0",
     "formik": "^2.2.9",
