[REFACTOR] Queries - Alias
- Queries for add new job
- Queries for get all categories
- Queries for all ubications
- Alias for paths on TsConfig
- change path for services / utils / context / components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*":["src/component/*"],
+      "@service/*":["service/*"],
+      "@context*": ["src/context/*"],
+      "@utils/*": ["src/utils/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
@@ -23,7 +30,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "service/graphql"  ],
+, "service/graphql", "src/component/add/ubications/Ubications.jsx"  ],
   "exclude": [
     "node_modules"
   ]
