--- a/package.json
+++ b/package.json
@@ -70,5 +70,9 @@
     "eslint-plugin-react": "^7.31.8",
     "prettier": "^2.5.1",
     "typescript": "^4.8.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
