--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "service/graphql", "src/component/add/ubications/Ubications.jsx", "service/graphql"  ],
+, "service/graphql", "src/component/add/ubications/Ubications.jsx", "service/graphql", "src/component/dashboard/LastJobs.jsx", "src/component/dashboard/LastJobs.jsx"  ],
   "exclude": [
     "node_modules"
   ]
