--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
     "next": "^12.3.1",
+    "next-sitemap": "^3.1.30",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
   "scripts": {
     "start": "next start",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "dev": "next dev",
     "test": "next test",
     "codegen": "graphql-codegen --config codegen.ts"
