--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "ES2021.String"
     ],
     "allowJs": true,
     "skipLibCheck": true,
